src/components/MenuBars/MenuItem/MenuItem.scss
@import "constants/style.scss";

$number-of-menu-items: 4;

// DISABLED
.menu-item:disabled {
  cursor: not-allowed;
}
.menu-item:disabled .menu-item__icon {
  color: #a3a6aa;
  background: transparent;
}

.menu-item:focus {
  outline: none;
}

.menu-item {
  background-color: transparent;
  border: none;
  border-radius: 18px;
  height: 36px;
  padding: 0;
  position: relative;
  width: 36px;
  cursor: pointer;
}

@include collapsedColumns(".menu-bars") {
  $menu-item__first-position-left: 28px;

  @for $i from 1 through $number-of-menu-items {
    .menu-item:nth-child(#{$i}) {
      left: $menu-item__first-position-left + (($i - 1) * 58px);
    }
  }

  .menu-item {
    position: absolute;
    top: 14px;
    right: 0;
    bottom: 0;
  }
}

.menu-item__tooltip {
  display: inline-flex;
  box-sizing: border-box;
  align-items: center;
  max-width: 0;
  height: 36px;
  border-radius: 16px;
}

.tooltip__text {
  font-size: 14px;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 1px;
  line-height: 16px;
  color: $color-white;
}

.menu-item__icon {
  position: absolute;
  top: 0;
  left: 0;
  height: 36px;
  border-radius: 100%;
  color: var(--primaryColor);
  background: $color-white;
}
[theme="dark"] {
  .menu-item__icon {
    color: $color-white;
    background: var(--primaryColor);
  }

  .menu-item-active {
    color: $color-white;
    background: $color-grooming-green;
  }
}
.menu-item:enabled:focus,
.menu-item--touch-hover,
.menu-item:enabled:hover {
  .menu-item__icon {
    color: $color-white;
    background-color: var(--secondaryColor);
  }
}

.menu-item--active .menu-item__icon {
  background-color: $color-grooming-green;
  color: $color-white;
}

.menu-item-active {
  color: $color-white;
  background: $color-grooming-green;
}

.menu-item__icon--end {
  visibility: hidden;
}

.menu-item--active.menu-item--touch-hover > .menu-item__icon--end,
.menu-item--active:enabled:hover > .menu-item__icon--end,
.menu-item--active:enabled:focus > .menu-item__icon--end,
.menu-item--active:enabled:active > .menu-item__icon--end {
  visibility: visible;
}

.menu-item--active.menu-item--touch-hover > .menu-item__icon--start,
.menu-item--active:enabled:focus > .menu-item__icon--start,
.menu-item--active:enabled:hover > .menu-item__icon--start,
.menu-item--active:enabled:active > .menu-item__icon--start {
  visibility: hidden;
}

// Columns partly hidden, no touch screen device
@include collapsedColumns(".menu-bars") {
  .menu-item--touch-hover,
  .menu-item:enabled:hover {
    .menu-item__tooltip {
      max-width: 264px;
      opacity: 1;
      visibility: visible;
      // Tooltip will be shown after 0.5s delay, but cleared instantly
      transition-delay: 0.5s;
    }
  }

  .menu-item__tooltip {
    position: absolute;
    animation: none;
    top: -58px;
    left: 18px;
    transform: translateX(-50%);
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.1s linear;
    box-shadow: 0 16px 32px 0 #0057ff3d;
    background-color: var(--primaryColor);
  }
  .admin-menu .menu-item__tooltip {
    box-shadow: 0 16px 32px 0 #ff00693d;
  }
  @media screen and (max-width: 450px) {
    .menu-item:nth-child(1) {
      .menu-item__tooltip {
        transform: translateX(-25%);
      }
      .menu-item__tooltip::after {
        left: calc(25% - 5px);
      }
    }
    .menu-item:nth-child(4) {
      .menu-item__tooltip {
        transform: translateX(-75%);
      }
      .menu-item__tooltip::after {
        left: calc(75% - 5px);
      }
    }
  }

  .menu-item__tooltip::after {
    content: "";
    position: absolute;
    top: 100%;
    left: calc(50% - 5px);
    border-width: 5px;
    border-style: solid;
    border-color: var(--primaryColor) transparent transparent transparent;
  }

  .tooltip__text {
    width: 100%;
    padding: 0 16px;
    white-space: nowrap;
  }
}

// *****************************
// ALL columns are fully visible
// *****************************
@include visibleColumns(".menu-bars") {
  .menu-item--touch-hover:enabled > .menu-item__tooltip,
  .menu-item:enabled:hover > .menu-item__tooltip {
    width: auto;
    max-width: 384px;
  }
  .menu-item--left.menu-item--touch-hover:enabled .tooltip__text,
  .menu-item--left:enabled:focus .tooltip__text,
  .menu-item--left:enabled:hover .tooltip__text {
    right: 30px;
  }
  .menu-item--right.menu-item--touch-hover:enabled .tooltip__text,
  .menu-item--right:enabled:focus .tooltip__text,
  .menu-item--right:enabled:hover .tooltip__text {
    left: 30px;
  }

  .menu-item__tooltip {
    position: absolute;
    white-space: nowrap;
    overflow: hidden;
    transition: max-width 0.25s ease-in-out;
    box-shadow: 0 0 24px #ff006955;
    background-color: var(--primaryColor);
  }
  .admin-menu .menu-item__tooltip {
    box-shadow: 0 0 24px #ff006955;
  }
  .user-menu .menu-item__tooltip {
    box-shadow: 0 0 24px #0057ff55;
  }
  .menu-item__icon {
    transition: all 0.25s linear;
  }
  .menu-item--left > .menu-item__tooltip {
    right: 18px;
    top: 0;
    border-top-right-radius: unset;
    border-bottom-right-radius: unset;
  }
  .menu-item--right > .menu-item__tooltip {
    left: 18px;
    top: 0;
    border-top-left-radius: unset;
    border-bottom-left-radius: unset;
  }

  .tooltip__text {
    color: $color-white;
    transition: all 0.5s ease-out;
    padding: 16px;
  }
  .menu-item--right .tooltip__text {
    padding-left: 30px;
  }
  .menu-item--left .tooltip__text {
    padding-right: 30px;
  }
}

